# OurPaint-Desktop-UI

./: CMakeLists.txt  README.md  resources.qrc
App/: CMakeLists.txt  CustomConsole.cc  RenderEngine.cc  RenderEngine.h  UIManager.cc  UIManager.h  main.cc
CommandConsole/: CommandConsole.cc  CustomConsole.cc  CustomConsole.h
Controls/: CustomMenu.cc  CustomMenu.h  DraggleContainer.cc  DraggleContainer.h  HideOpenPanelButton.cc  HideOpenPanelButton.h  MenuButton.cc  MenuButton.h  RotatedLabel.cc  RotatedLabel.h  TabWidget.cc  TabWidget.h
Core/: FramelessWindow.cc  FramelessWindow.h  MainWindow.cc  MainWindow.h  ProjectManager.cc  ProjectManager.h  RenderEngine.cc  RenderEngine.h  ToolsType.h  UIManager.cc  UIManager.h
DragDrop/: ContainerWidget.cc
FileSystem/: FileSystem.cc  FileSystem.h
Lib/: CMakeLists.txt  resources.qrc  translations.qrc
Lib/Core/: ProjectManager.cc  ProjectManager.h  ToolsType.h
Lib/DragDrop/: ContainerWidget.cc  ContainerWidget.h  DraggleButton.cc  DraggleButton.h  SlotWidget.cc  SlotWidget.h
Lib/FileSystem/: FileSystem.cc  FileSystem.h
Lib/Menus/: ArcMenu.cc  ArcMenu.h  CircleMenu.cc  CircleMenu.h  CollaborationMenu.cc  CollaborationMenu.h  CustomMenu.cc  CustomMenu.h  LineMenu.cc  LineMenu.h  MenuButton.cc  MenuButton.h  ProjectMenu.cc  ProjectMenu.h  TabMenu.cc  TabMenu.h  VersionControlMenu.cc  VersionControlMenu.h
Lib/Panels/: InformationPanel.cc
Lib/PopUp/: ConfirmDialog.cc  ConfirmDialog.h  InputWidget.cc  InputWidget.h  NameInputWidget.cc  ParameterInputWidget.cc  ParameterInputWidget.h  PathInputWidget.cc  PathInputWidget.h
Lib/Styles/: app.qss  buttons.qss  menu.qss  scroll.qss  text.qss  tooltip.qss  window.qss
Lib/Widgets/: CentralWidget.h  CommandConsole.cc  CommandConsole.h  NotificationContainer.cc  NotificationWidget.cc  NotificationWidget.h  PainterWidget.cc  PainterWidget.h  RenameTabLineEdit.cc  RenameTabLineEdit.h  SettingsWidget.cc  SettingsWidget.h  SideMenu.cc  SideMenu.h  ToolBar.cc  ToolBar.h  TopBar.cc  TopBar.h
Lib/Windows/: BaseEditorPage.cc  BaseEditorPage.h  BaseEditorTopBar.cc  BaseEditorTopBar.h  BaseEditorWindow.cc  BaseEditorWindow.h  BasePage.cc  BaseWindow.cc  FramelessWindow.cc  FramelessWindow.h
Lib/Windows/ProjectWindow/: ProjectPage.cc  ProjectPage.h  ProjectWindow.cc  ProjectWindow.h  TabBar.cc  TabBar.h  TabWidget.cc  TabWidget.h  TopBarProject.cc  TopBarProject.h
Lib/Windows/StartWindow/: AnimationWidget.cc  AnimationWidget.h  ProjectButton.cc  ProjectButton.h  ProjectsListWidget.cc  ProjectsListWidget.h  StartPage.cc  StartPage.h  StartWindow.cc  StartWindow.h  TopBarStart.cc  TopBarStart.h
Lib/Windows/TabWindow/: TabPage.cc  TabPage.h  TabWindow.cc  TopBarTab.cc  TopBarTab.h
Lib/translations/: app_by.qm  app_by.ts  app_eng.qm  app_eng.ts  app_ing.ts  app_ru.qm  app_ru.ts
Menus/: ArcMenu.cc  ArcMenu.h  CircleMenu.cc  CollaborationMenu.cc  CollaborationMenu.h  CustomMenu.cc  LineMenu.cc  LineMenu.h  MenuButton.cc  ProjectMenu.cc  ProjectMenu.h  ToolsType.h  VersionControlMenu.cc  VersionControlMenu.h
Pages/ProjectPage/: NavigationWidget.cc  NavigationWidget.h  ProjectPage.cc  ProjectPage.h  TabBar.cc  TabBar.h  TopBarProject.cc  TopBarProject.h
Pages/StartPage/: AnimationArea.cc  AnimationArea.h  AnimationWidget.cc  ProjectButton.cc  ProjectButton.h  ProjectsListWidget.cc  ProjectsListWidget.h  StartPage.cc  StartPage.h  TopBarStart.cc  TopBarStart.h
Pages/TabPage/: TabPage.cc  TabPage.h  TopBarTab.cc  TopBarTab.h
Painter/: PainterWidget.cc  PainterWidget.h
Panels/: InformationPanel.cc  InformationPanel.h  MessengerPanel.cc  MessengerPanel.h
PopUp/: InputWidget.cc  InputWidget.h  NameInputWidget.h  PathInputWidget.cc
Styles/: buttons.qss  resources.qrc  text.qss
Widgets/: CentralWidget.cc  CommandConsole.cc  CommandConsole.h  NotificationContainer.cc  NotificationContainer.h  NotificationWidget.h  PainterWidget.cc  PainterWidget.h  SettingsWidget.cc  SettingsWidget.h  SideMenu.cc  SideMenu.h  SideTool.cc  SideTool.h  TabBar.cc  TabBar.h  ToolBar.cc  ToolBar.h  TopBar.cc  TopBar.h
Windows/: BaseEditorPage.cc  BaseEditorWindow.cc  BasePage.h  BaseWindow.h  FramelessWindow.h
Windows/ProjectWindow/: ProjectWindow.cc  ProjectWindow.h  TabWidget.cc  TabWidget.h  TopBarProject.h
Windows/StartWindow/: AnimationArea.cc  ProjectButton.cc  StartPage.cc  StartWindow.cc
Windows/TabWindow/: TabWindow.cc  TabWindow.h  TopBarTab.cc  TopBarTab.h
